syntax = "proto3";

option csharp_namespace = "GrpcProto";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

service ServerSentCommands {
  rpc GetCommands (GetCommandsRequest) returns (stream Command);
}

message Command {
  string action = 1;
  repeated string args = 2;
}

message GetCommandsRequest {

}
